--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </div>
     <div class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">abdulrahman salah</a>.
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.<br>
+      Coded by 
+      <a href="#">abdulrahman salah</a>.
     </div>
   </body>
 </html>
