--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
         <img src="images/illustration-hero.svg" alt="" />
       </div>
       <div class="content">
-        <h2>Order Summary</h2>
+        <h1>Order Summary</h1>
         <p>
           You can now listen to millions of songs, audiobooks, and podcasts on
           any device anywhere you like!
         </p>
         <div class="box-plan">
           <img src="images/icon-music.svg" alt="music" />
-          <div class="price">
-            <h3>Annual Plan</h3>
-            <span>$59.99/year</span>
+          <div class="fix-both">
+            <div class="price">
+              <h3>Annual Plan</h3>
+              <span>$59.99/year</span>
+            </div>
+            <span>Change</span>
           </div>
-          <span>Change</span>
         </div>
         <span class="btn btn-proceed">Proceed to Payment</span>
         <span class="btn btn-cancel">Cancel Order</span>
